# speech_to_text

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: callback_example.py  custom_engine_example.py  deepgram_example.py  file_source_example.py  iterator_example.py  normalize_example.py  select_microphone_example.py  whisper_example.py
speech_to_text/: __init__.py  audio.py  core.py  models.py
speech_to_text/engines/: __init__.py  base.py  deepgram_engine.py  vosk_engine.py  whisper_engine.py
speech_to_text/normalizers/: __init__.py  base.py  llm_normalizer.py
